k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: yaml
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: jenkins-secret
      hosts:
        - jenkins.seb-cours-datascientest.cloudns.eu
  rules:
  - host: jenkins.seb-cours-datascientest.cloudns.eu
    http:
      paths:
        - path: /api/v1/casts/
          pathType: Prefix
          backend:
             service:
              name: cast-service
              port:
                number: 8000
      paths:
        - path: /api/v1/movie/
          pathType: Prefix
          backend:
             service:
              name: movie-service
              port:
                number: 8000
